--- a/README.textile
+++ b/README.textile
@@ -2,7 +2,7 @@ h1. Hon-ee Pot Captcha
 
 I wanted to try to use the honey pot captcha technique to combat spam on my site. This technique includes a field on each form, hides it off the page with CSS and then validates on the back end to make sure it's not filled in.
 
-This addon validates Freeform forms, Safecraker forms, and the EE comment form.
+This addon validates Freeform, Safecracker, Zoo Visitor Registration, and EE comment forms.
 
 h2. Requirements & Installation
 
@@ -27,13 +27,12 @@ In my CSS, I have a class to move things off of the page:
   display: block !important;
   left: -9999px !important;
   position: absolute !important;
-  top: -9999px !important;
 }</pre>
 
 h3. Comment forms
 
 Follow the same steps as the Freeform forms, except you do not have to create the field in Freeform.
 
-h3. Safecracker Forms
+h3. Safecracker & Zoo Visitor Registration Forms
 
 Doesn't show error when using inline validation, but still protects the entry from being submitted.
