--- a/README.textile
+++ b/README.textile
@@ -2,7 +2,7 @@ h1. Hon-ee Pot Captcha
 
 I wanted to try to use the honey pot captcha technique to combat spam on my site. This technique includes a field on each form, hides it off the page with CSS and then validates on the back end to make sure it's not filled in.
 
-This addon validates Freeform, Safecracker, Zoo Visitor Registration, and EE comment forms.
+This addon validates Freeform, Safecracker, Zoo Visitor Registration, ProForm, and EE comment forms.
 
 h2. Requirements & Installation
 
@@ -33,6 +33,6 @@ h3. Comment forms
 
 Follow the same steps as the Freeform forms, except you do not have to create the field in Freeform.
 
-h3. Safecracker & Zoo Visitor Registration Forms
+h3. Safecracker, Zoo Visitor Registration, & ProForm Forms
 
 Doesn't show error when using inline validation, but still protects the entry from being submitted.
